--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "engines": {
         "vscode": "^1.57.0"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jinlongchen/vscode-kext"
+    },
+    "homepage": "https://github.com/jinlongchen/vscode-kext/blob/master/README.md",
     "categories": [
         "Other",
         "Snippets"
