--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,10 +24,9 @@
         {
             "type": "npm",
             "script": "lint",
-            "problemMatcher": {
-                "base": "$tslint5",
-                "fileLocation": "absolute"
-            }
+            "problemMatcher": [
+                "$eslint-stylish"
+            ]
         }
     ]
 }
