--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vscode-lovecode",
     "displayName": "LoveCode (LeetCode)",
-    "description": "修改了LeetCode的标题和图标，这样一来，老板就不知道你在划水刷题了。",
+    "description": "在LeetCode的基础上增加了一些方便刷题的功能",
     "version": "0.18.11",
     "author": "Sheng Chen",
     "publisher": "jimchen",
@@ -10,6 +10,11 @@
     "engines": {
         "vscode": "^1.57.0"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jinlongchen/vscode-lovecode"
+    },
+    "homepage": "https://github.com/jinlongchen/vscode-lovecode/blob/master/README.md",
     "categories": [
         "Other",
         "Snippets"
