--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-lovecode",
     "displayName": "LoveCode (LeetCode)",
     "description": "在LeetCode的基础上增加了一些方便刷题的功能",
-    "version": "0.18.11",
+    "version": "0.18.12",
     "author": "Sheng Chen",
     "publisher": "jimchen",
     "license": "MIT",
@@ -779,6 +779,6 @@
         "markdown-it": "^8.4.2",
         "require-from-string": "^2.0.2",
         "unescape-js": "^1.1.4",
-        "vsc-leetcode-cli": "git+ssh://git@github.com:jinlongchen/leetcode-cli.git"
+        "vsc-leetcode-cli": "git+https://github.com/jinlongchen/leetcode-cli.git"
     }
 }
